--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,7 +26,10 @@
             <a href="exercicios/listasAninhadas.html">04 - Listas Aninhadas</a> | 
             <a href="exercicios/links.html">05 - Links</a> | 
             <a href="exercicios/tabela.html">06 - Tabela</a> | 
-            <a href="exercicios/form/form.html">07 - Form </a>
+            <a href="exercicios/form/form.html">07 - Form </a> | 
+            <a href="exercicios/imagens.html">08 - Imagens </a> | 
+            <a href="exercicios/video.html">09 - Vídeo </a> | 
+            <a href="exercicios/tagNaoVisuais.html">10 - Tags Não Visuais </a> 
 
         </nav>
         <section id="conteudo"></section>
