--- a/css/box.html
+++ b/css/box.html
@@ -5,7 +5,20 @@
     <meta charset="UTF-8">
     <title>Box Model</title>
     <style>
-        /* ... */
+        body { font-size: 80px; }
+        .c1 { background-color: orange; }
+        .c2 { background-color: skyblue; }
+        .c3 { background-color: tomato; }
+
+        div {
+            float: left;
+            padding-top: 80px;
+            padding: 10px 50px 80px 100px;
+            padding: 100px 50px;
+            padding: 50px;
+            margin: 10px 20px;
+            border: 10px solid black;
+        }
     </style>
 </head>
 
