--- a/css/alturaLargura.html
+++ b/css/alturaLargura.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <title>Altura e Largura</title>
     <style>
+
+        html {
+            height: 100%;
+        }
         body {
             font-size: 40px;
             background-color: coral;
+            height: 100%;
+            margin: 0;
         }
 
         div {
@@ -16,6 +22,13 @@
 
         span {
             background-color: dodgerblue;
+        }
+
+        span, div {
+            width: 50%;
+            height: 250px;
+            height: 50%; /* vai considerar se html e body estiver com 100% */
+            display: block;
         }
     </style>
 </head>
