--- a/css/overflow.html
+++ b/css/overflow.html
@@ -8,7 +8,9 @@
             font-size: 40px;
             height: 100px;
             width: 260px;
-            border: solid 3px;
+            border: solid 3px; 
+            overflow: scroll;
+            /*overflow: hidden;*/
         }
     </style>
 </head>
