--- a/dom/selecionandoElementos1.html
+++ b/dom/selecionandoElementos1.html
@@ -18,6 +18,10 @@
         const divsArray = [...divs]
         divsArray.forEach(e => e.classList.add('destaque'))
 
+        const ultimosElementos = document.getElementsByClassName('ultimo')
+        for(let e of ultimosElementos) {
+            e.classList.remove('destaque')
+        }
     </script>
 </body>
 </html>
